# chelix

./: .envrc-example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF-reconfigurable-context-windows.md  LICENSE.md  README.md  agent-presets.html  anthropic-oauth.html  authentication.html  browser-automation.html  caldav.html  changelog.html  channels.html  checkpoints.html  choosing-a-provider.html  cloud-deploy.html  commands.html  compaction.html  comparison.html  configuration-reference.html  configuration.html  deploy-vps.html  discord.html  docker.html  e2e-testing.html  external-agents.html  flake.nix  frontend.html  graphql.html  hooks.html  index.html  install.sh  installation.html  justfile  local-llm.html  local-validation.html  (+45 more)
crates/agents/: Cargo.toml
crates/agents/src/: docs.rs  json_repair.rs  lazy_tools.rs  lib.rs  memory_writer.rs  prompt.rs  provider_chain.rs  response_sanitizer.rs  silent_turn.rs  skills.rs  title.rs  tool_arg_validator.rs  tool_loop_detector.rs  tool_parsing.rs  tool_registry.rs
crates/agents/src/model/: chat.rs  convert.rs  mod.rs  options.rs  (+2 more)
crates/auth/: Cargo.toml
crates/auth/src/: credential_store.rs  error.rs  lib.rs  locality.rs  webauthn.rs
crates/auto-reply/: Cargo.toml
crates/auto-reply/src/: directives.rs  reply.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: boot.rs  code_index.rs
crates/browser/: Cargo.toml
crates/browser/src/: container.rs  detect.rs  lib.rs  manager.rs  pool.rs  snapshot.rs  types.rs
crates/caldav/: Cargo.toml
crates/caldav/src/: client.rs  error.rs  ical.rs  lib.rs  tool.rs
crates/canvas/: Cargo.toml
crates/channels/: Cargo.toml
crates/channels/src/: commands.rs  plugin.rs  registry.rs
crates/chat/: Cargo.toml
crates/chat/src/: agent_loop.rs  channels.rs  chat_error.rs  compaction.rs  lib.rs  memory_tools.rs  message.rs  models.rs  prompt.rs  run_with_tools.rs  runtime.rs  streaming.rs  types.rs
crates/claude-import/: Cargo.toml
crates/claude-import/src/: lib.rs  mcp_servers.rs  memory.rs  skills.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_commands.rs  browser_commands.rs  channel_commands.rs  config_commands.rs  data_commands.rs  db_commands.rs  doctor_commands.rs  doctor_commands_tests.rs  hooks_commands.rs  import_commands.rs  main.rs  memory_commands.rs  node_commands.rs  sandbox_commands.rs  service_commands.rs  voicecall_commands.rs
crates/code-index/: Cargo.toml
crates/code-index/src/: backend_qmd.rs  chunker.rs  config.rs  discover.rs  index.rs  lib.rs  search.rs  snapshot_store.rs  tools.rs
crates/codex-import/: Cargo.toml
crates/codex-import/src/: lib.rs  mcp_servers.rs  memory.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  hooks.rs  http_client.rs  lib.rs  model.rs
crates/config/: Cargo.toml
crates/config/src/: agent_defs.rs  container_mounts.rs  defaults.rs  env_subst.rs  lib.rs  loader.rs  provider_env.rs  schema.rs  template.rs  validate.rs  version.rs
crates/cron/: Cargo.toml
crates/cron/migrations/: 20240205100002_init.sql
crates/cron/src/: heartbeat.rs  lib.rs  service.rs  store_file.rs  store_memory.rs  store_sqlite.rs  system_events.rs  types.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: client.rs  error.rs  main.rs  output.rs
crates/discord/: Cargo.toml
crates/discord/src/: access.rs  commands.rs  config.rs  error.rs  lib.rs  outbound.rs  plugin.rs  state.rs
crates/embedding-service/: Cargo.toml
crates/embedding-service/src/: api.rs  app.rs  engine.rs  engine_api.rs  lib.rs  main.rs
crates/external-agents/: Cargo.toml
crates/external-agents/src/: bridge.rs  lib.rs  registry.rs  types.rs
crates/gateway/: Cargo.toml
crates/gateway/migrations/: 20240205100003_init.sql  20260716000000_env_variable_flags.sql  20260719110000_drop_node_pairing.sql
crates/gateway/src/: agent_persona.rs  approval.rs  auth.rs  auth_webauthn.rs  broadcast.rs  channel.rs  channel_agent_tools.rs  channel_events.rs  channel_store.rs  channel_webhook_dedup.rs  channel_webhook_middleware.rs  channel_webhook_rate_limit.rs  chat.rs  chat_error.rs  cron.rs  external_agents.rs  lib.rs  logs.rs  mcp_agent_tools.rs  mcp_health.rs  mcp_service.rs  mdns.rs  message_log_store.rs  network_audit.rs  node_command.rs  node_exec.rs  onboarding.rs  operation_progress.rs  project.rs  project_aware_tools.rs  provider_setup.rs  services.rs  session.rs  session_reasoning.rs  session_types.rs  ssh_probe.rs  state.rs  teams_agent_tools.rs  tts_phrases.rs  update_check.rs  (+5 more)
crates/gateway/tests/: read_skill_tool.rs
crates/httpd/: Cargo.toml
crates/httpd/src/: auth_middleware.rs  auth_routes.rs  channel_webhook_middleware.rs  data_routes.rs  env_routes.rs  graphql_routes.rs  lib.rs  login_guard.rs  metrics_middleware.rs  metrics_routes.rs  push_routes.rs  request_throttle.rs  ssh_routes.rs  tools_routes.rs  upload_routes.rs  ws.rs
crates/httpd/tests/: auth_middleware.rs  chat_ui.rs  graphql_chat_binding.rs  heartbeat_cron.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: access.rs  client.rs  config.rs  error.rs  oidc.rs  outbound.rs  plugin.rs  state.rs
crates/mcp-agent-bridge/: Cargo.toml
crates/mcp-agent-bridge/src/: adapter.rs  error.rs
crates/media/: Cargo.toml
crates/memory/: Cargo.toml
crates/memory/src/: chunker.rs  config.rs  embeddings_local.rs  embeddings_openai.rs  error.rs  lib.rs  manager.rs  runtime.rs  schema.rs  search.rs  tools.rs  watcher.rs  writer.rs
crates/msteams/: Cargo.toml
crates/msteams/src/: channel_webhook_verifier.rs  config.rs  errors.rs  lib.rs  outbound.rs  plugin.rs  state.rs
crates/node-host/: Cargo.toml
crates/node-host/src/: error.rs  identity.rs  lib.rs  runner.rs  service.rs
crates/nostr/: Cargo.toml
crates/nostr/src/: access.rs  bus.rs  config.rs  error.rs  outbound.rs  plugin.rs  state.rs
crates/nostr/tests/: nostr_integration.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: config_dir.rs  defaults.rs  discovery.rs  flow.rs  kimi.rs  redirect.rs  registration_store.rs  storage.rs
crates/oauth/tests/: oauth_tests.rs
(+993 files in other folders)
