[package]
edition.workspace = true
name              = "chelix-agents"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:chelix-metrics"]

[dependencies]
anyhow          = { workspace = true }
async-stream    = { workspace = true }
async-trait     = { workspace = true }
chelix-common   = { workspace = true }
chelix-config   = { workspace = true }
chelix-sessions = { workspace = true }
chelix-skills   = { workspace = true }
futures         = { workspace = true }
include_dir     = { workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
time            = { features = ["macros"], workspace = true }
tokio           = { workspace = true }
tokio-stream    = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }

# Optional
chelix-metrics = { optional = true, workspace = true }

[dev-dependencies]
axum     = { workspace = true }
http     = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
