[package]
edition.workspace = true
name              = "chelix-auto-reply"
version.workspace = true

[dependencies]
chelix-agents   = { workspace = true }
chelix-common   = { workspace = true }
chelix-metrics  = { optional = true, workspace = true }
chelix-routing  = { workspace = true }
chelix-sessions = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[lints]
workspace = true
