[package]
edition.workspace = true
name              = "chelix-browser"
version.workspace = true

[dependencies]
async-trait    = "0.1"
base64         = { workspace = true }
chelix-common  = { workspace = true }
chelix-config  = { workspace = true }
chelix-metrics = { optional = true, workspace = true }
chromiumoxide  = { default-features = false, features = ["tokio-runtime"], version = "0.8" }
futures        = { workspace = true }
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sysinfo        = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = "2.5"
uuid           = { workspace = true }
which          = "8.0"

[dev-dependencies]
serial_test = { workspace = true }
tempfile    = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]
tracing = []

[lints]
workspace = true
