[package]
edition.workspace = true
name              = "chelix-canvas"
version.workspace = true

[dependencies]
axum           = { workspace = true }
chelix-common  = { workspace = true }
chelix-metrics = { optional = true, workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[lints]
workspace = true
