[package]
edition.workspace = true
name              = "chelix-channels"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
bytes          = { workspace = true }
chelix-common  = { workspace = true }
chelix-config  = { workspace = true }
chelix-metrics = { optional = true, workspace = true }
http           = { workspace = true }
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[lints]
workspace = true
