[package]
edition.workspace    = true
name                 = "chelix-chat"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow                = { workspace = true }
async-trait           = { workspace = true }
base64                = { workspace = true }
chrono                = { features = ["serde"], optional = true, workspace = true }
chrono-tz             = { workspace = true }
futures               = { workspace = true }
chelix-agents         = { workspace = true }
chelix-channels       = { workspace = true }
chelix-common         = { workspace = true }
chelix-config         = { workspace = true }
chelix-memory         = { workspace = true }
chelix-metrics        = { optional = true, workspace = true }
chelix-plugins        = { workspace = true }
chelix-projects       = { workspace = true }
chelix-providers      = { workspace = true }
chelix-service-traits = { workspace = true }
chelix-sessions       = { workspace = true }
chelix-skills         = { workspace = true }
chelix-telegram       = { optional = true, workspace = true }
chelix-tools          = { workspace = true }
chelix-voice          = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tokio-stream          = { workspace = true }
tokio-util            = { workspace = true }
tracing               = { workspace = true }
uuid                  = { workspace = true }

[features]
# Enable the LLM-backed compaction modes (`structured` and `llm_replace`).
# Default-on so users get full compaction out of the box. Disabling this
# removes the streaming-summary path and LLM modes become a runtime config
# error; the `deterministic` and `recency_preserving` modes remain available.
bundled-skills     = ["chelix-skills/bundled-skills"]
llm-compaction     = []
metrics            = ["dep:chelix-metrics", "chelix-metrics/sqlite"]
push-notifications = ["dep:chrono"]
web-ui             = ["dep:chrono"]
telegram           = ["dep:chelix-telegram"]

default = ["llm-compaction"]

[dev-dependencies]
async-stream    = { workspace = true }
chelix-channels = { workspace = true }
sqlx            = { workspace = true }
tempfile        = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }

[lints]
workspace = true
