[package]
description       = "Import data from Claude Code and Claude Desktop into Chelix"
edition.workspace = true
license.workspace = true
name              = "chelix-claude-import"
version.workspace = true

[dependencies]
chelix-import-core = { workspace = true }
dirs-next          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
