[package]
description       = "Personal AI gateway"
edition.workspace = true
homepage          = "https://github.com/agentics-skills/chelix"
license           = "MIT"
name              = "chelix"
repository        = "https://github.com/agentics-skills/chelix"
version.workspace = true

[[bin]]
name = "chelix"
path = "src/main.rs"

[dependencies]
anyhow               = { workspace = true }
chelix-agents        = { workspace = true }
chelix-browser       = { workspace = true }
chelix-claude-import = { optional = true, workspace = true }
chelix-codex-import  = { optional = true, workspace = true }
chelix-common        = { workspace = true }
chelix-config        = { workspace = true }
chelix-cron          = { workspace = true }
chelix-gateway       = { workspace = true }
chelix-httpd         = { workspace = true }
chelix-import-core   = { workspace = true }
chelix-memory        = { workspace = true }
chelix-node-host     = { workspace = true }
chelix-oauth         = { workspace = true }
chelix-onboarding    = { workspace = true }
chelix-plugins       = { workspace = true }
chelix-portable      = { workspace = true }
chelix-projects      = { workspace = true }
chelix-sessions      = { workspace = true }
chelix-skills        = { workspace = true }
chelix-tools         = { workspace = true }
chelix-web           = { optional = true, workspace = true }
clap                 = { workspace = true }
dotenvy              = { workspace = true }
open                 = { workspace = true }
rand                 = { workspace = true }
reqwest              = { workspace = true }
secrecy              = { workspace = true }
serde_json           = { workspace = true }
sqlx                 = { workspace = true }
time                 = { workspace = true }
tokio                = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
uuid                 = { workspace = true }
which                = { workspace = true }

[target.'cfg(all(not(target_os = "windows"), not(all(target_os = "linux", target_arch = "aarch64"))))'.dependencies]
tikv-jemallocator = { optional = true, workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
agent          = ["chelix-gateway/agent", "chelix-web?/agent"]
caldav         = ["chelix-gateway/caldav"]
home-assistant = ["chelix-gateway/home-assistant"]
# User-facing integrations stay default-on in the CLI crate per workspace policy,
# even when the underlying implementation remains feature-gated in lower crates.
#
# `full` is the portable production feature set used by release, packaging, and
# container builds. It intentionally excludes build-mode toggles (`embedded-*`)
# and accelerator-specific features that require host SDKs/toolchains not
# present on every target.
bundled-skills = ["chelix-gateway/bundled-skills", "chelix-web?/bundled-skills"]
default = ["full"]
full = [
  "agent",
  "bundled-skills",
  "caldav",
  "claude-import",
  "code-index-builtin",
  "code-splitter",
  "codex-import",
  "discord",
  "file-watcher",
  "firecrawl",
  "fs-tools",
  "graphql",
  "home-assistant",
  "jemalloc",
  "lang-bash",
  "lang-c",
  "lang-cpp",
  "lang-css",
  "lang-go",
  "lang-html",
  "lang-java",
  "lang-javascript",
  "lang-json",
  "lang-markdown",
  "lang-python",
  "lang-ruby",
  "lang-rust",
  "lang-toml",
  "lang-typescript",
  "local-embeddings",
  "matrix",
  "mdns",
  "metrics",
  "msteams",
  "nostr",
  "prometheus",
  "provider-openai-codex",
  "push-notifications",
  "qmd",
  "signal",
  "slack",
  "telegram",
  "telephony",
  "tls",
  "vault",
  "voice",
  "wasm",
  "web-ui",
  "whatsapp",
]
# Minimal build for memory-constrained devices (Raspberry Pi, etc.).
# Build with: cargo build --release --no-default-features --features lightweight
code-index-builtin = ["chelix-gateway/code-index-builtin"]
code-splitter      = ["chelix-memory/code-splitter"]
discord            = ["chelix-httpd/discord"]
embedded-assets    = ["chelix-web?/embedded-assets"]
embedded-wasm      = ["chelix-tools/embedded-wasm"]
file-watcher       = ["chelix-gateway/file-watcher"]
firecrawl          = ["chelix-gateway/firecrawl"]
fs-tools           = ["chelix-gateway/fs-tools"]
graphql            = ["chelix-httpd/graphql", "chelix-web?/graphql"]
jemalloc           = ["dep:tikv-jemallocator"]
lang-bash          = ["chelix-memory/lang-bash"]
lang-c             = ["chelix-memory/lang-c"]
lang-cpp           = ["chelix-memory/lang-cpp"]
lang-css           = ["chelix-memory/lang-css"]
lang-go            = ["chelix-memory/lang-go"]
lang-html          = ["chelix-memory/lang-html"]
lang-java          = ["chelix-memory/lang-java"]
lang-javascript    = ["chelix-memory/lang-javascript"]
lang-json          = ["chelix-memory/lang-json"]
lang-markdown      = ["chelix-memory/lang-markdown"]
lang-python        = ["chelix-memory/lang-python"]
lang-ruby          = ["chelix-memory/lang-ruby"]
lang-rust          = ["chelix-memory/lang-rust"]
lang-toml          = ["chelix-memory/lang-toml"]
lang-typescript    = ["chelix-memory/lang-typescript"]
# jemalloc is intentionally unavailable on linux/aarch64 to avoid runtime
# crashes on 16 KiB page kernels (e.g. Raspberry Pi OS variants).
claude-import         = ["chelix-gateway/claude-import", "dep:chelix-claude-import"]
codex-import          = ["chelix-gateway/codex-import", "dep:chelix-codex-import"]
lightweight           = ["jemalloc", "tls", "web-ui"]
local-embeddings      = ["chelix-gateway/local-embeddings"]
matrix                = ["chelix-httpd/matrix"]
mdns                  = ["chelix-gateway/mdns"]
metrics               = ["chelix-httpd/metrics", "chelix-web?/metrics"]
msteams               = ["chelix-httpd/msteams"]
nostr                 = ["chelix-httpd/nostr"]
prometheus            = ["chelix-httpd/prometheus"]
provider-openai-codex = ["chelix-gateway/provider-openai-codex"]
push-notifications    = ["chelix-httpd/push-notifications", "chelix-web?/push-notifications"]
qmd                   = ["chelix-gateway/qmd"]
signal                = ["chelix-httpd/signal"]
slack                 = ["chelix-httpd/slack"]
telegram              = ["chelix-gateway/telegram"]
telephony             = ["chelix-httpd/telephony"]
tls                   = ["chelix-httpd/tls"]
vault                 = ["chelix-httpd/vault", "chelix-web?/vault"]
voice                 = ["chelix-gateway/voice", "chelix-web?/voice"]
wasm                  = ["chelix-tools/wasm"]
web-ui                = ["chelix-httpd/web-ui", "dep:chelix-web"]
whatsapp              = ["chelix-gateway/whatsapp"]

[lints]
workspace = true
