[package]
description       = "Codebase indexing for chelix — git-tracked file discovery, filtering, chunking, and project-scoped search"
edition.workspace = true
name              = "chelix-code-index"
version.workspace = true

[features]
default = ["builtin", "tracing"]
qmd = ["dep:chelix-qmd", "dep:chelix-agents"]
builtin = ["dep:chelix-memory", "dep:chelix-agents", "dep:sqlx", "dep:tokio"]
file-watcher = ["dep:notify-debouncer-full", "dep:tokio", "dep:tokio-util"]
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

[dependencies]
anyhow           = { workspace = true }
async-trait      = { workspace = true }
gix              = { workspace = true }
chelix-agents    = { optional = true, workspace = true }
chelix-memory    = { optional = true, workspace = true }
chelix-qmd       = { optional = true, workspace = true }
chelix-config    = { workspace = true }
chelix-splitter  = { workspace = true }
chelix-tools     = { workspace = true }
notify-debouncer-full = { optional = true, workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true }
sqlx             = { optional = true, workspace = true }
tempfile         = { workspace = true }
thiserror        = { workspace = true }
time             = { workspace = true }
tokio            = { workspace = true, features = ["sync"], optional = true }
tokio-util       = { workspace = true, optional = true }
tracing          = { workspace = true, optional = true }
metrics          = { workspace = true, optional = true }


[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
