[package]
description       = "Codebase indexing for chelix — git-tracked file discovery, filtering, chunking, and project-scoped search"
edition.workspace = true
name              = "chelix-code-index"
version.workspace = true

[features]
builtin      = ["dep:chelix-agents", "dep:chelix-memory", "dep:sqlx", "dep:tokio"]
default      = ["builtin", "tracing"]
file-watcher = ["dep:notify-debouncer-full", "dep:tokio", "dep:tokio-util"]
metrics      = ["dep:metrics"]
qmd          = ["dep:chelix-agents", "dep:chelix-qmd"]
tracing      = ["dep:tracing"]

[dependencies]
anyhow                = { workspace = true }
async-trait           = { workspace = true }
chelix-agents         = { optional = true, workspace = true }
chelix-config         = { workspace = true }
chelix-memory         = { optional = true, workspace = true }
chelix-qmd            = { optional = true, workspace = true }
chelix-splitter       = { workspace = true }
chelix-tools          = { workspace = true }
gix                   = { workspace = true }
metrics               = { optional = true, workspace = true }
notify-debouncer-full = { optional = true, workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
sha2                  = { workspace = true }
sqlx                  = { optional = true, workspace = true }
tempfile              = { workspace = true }
thiserror             = { workspace = true }
time                  = { workspace = true }
tokio                 = { features = ["sync"], optional = true, workspace = true }
tokio-util            = { optional = true, workspace = true }
tracing               = { optional = true, workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { features = ["macros", "rt"], workspace = true }

[lints]
workspace = true
