[package]
description       = "Import data from OpenAI Codex CLI into Chelix"
edition.workspace = true
license.workspace = true
name              = "chelix-codex-import"
version.workspace = true

[dependencies]
chelix-import-core = { workspace = true }
dirs-next          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
