[package]
edition.workspace = true
name              = "chelix-common"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
chelix-metrics = { optional = true, workspace = true }
futures        = { workspace = true }
ipnet          = { workspace = true }
reqwest        = { workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[lints]
workspace = true
