[package]
edition.workspace = true
name              = "chelix-config"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
chelix-common  = { workspace = true }
chelix-metrics = { optional = true, workspace = true }
chrono-tz      = { workspace = true }
directories    = { workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_yaml     = { workspace = true }
tempfile       = { workspace = true }
thiserror      = { workspace = true }
toml           = { workspace = true }
toml_edit      = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[lints]
workspace = true
