[package]
edition.workspace = true
name              = "chelix-discord"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
async-trait     = { workspace = true }
base64          = { workspace = true }
chelix-channels = { workspace = true }
chelix-common   = { workspace = true }
chelix-media    = { workspace = true }
chelix-metrics  = { optional = true, workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serenity        = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }

[features]
metrics = ["dep:chelix-metrics"]

[lints]
workspace = true

[dev-dependencies]
image = { workspace = true }
