[package]
description       = "Managed local GGUF embedding sidecar for Chelix"
edition.workspace = true
name              = "chelix-embedding-service"
version.workspace = true

[[bin]]
name              = "chelix-embedding-service"
path              = "src/main.rs"
required-features = ["native-engine"]

[features]
default       = ["metrics", "native-engine", "tracing"]
metrics       = ["dep:metrics"]
native-engine = ["dep:llama-cpp-2"]
tracing       = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
anyhow             = { workspace = true }
async-trait        = { workspace = true }
axum               = { workspace = true }
chelix-protocol    = { workspace = true }
clap               = { workspace = true }
llama-cpp-2        = { optional = true, workspace = true }
metrics            = { optional = true, workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { optional = true, workspace = true }
tracing-subscriber = { optional = true, workspace = true }

[dev-dependencies]
reqwest = { workspace = true }

[lints]
workspace = true
