[package]
edition.workspace    = true
name                 = "chelix-httpd"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow                = { workspace = true }
async-graphql         = { optional = true, workspace = true }
async-graphql-axum    = { optional = true, workspace = true }
async-trait           = { workspace = true }
axum                  = { workspace = true }
axum-extra            = { features = ["cookie"], workspace = true }
base64                = { workspace = true }
bytes                 = { workspace = true }
chrono                = { features = ["serde"], optional = true, workspace = true }
chrono-tz             = { workspace = true }
dashmap               = { workspace = true }
futures               = { workspace = true }
hostname              = { workspace = true }
ipnet                 = { workspace = true }
chelix-agents         = { workspace = true }
chelix-auth           = { workspace = true }
chelix-browser        = { workspace = true }
chelix-channels       = { workspace = true }
chelix-common         = { workspace = true }
chelix-config         = { workspace = true }
chelix-cron           = { workspace = true }
chelix-gateway        = { workspace = true }
chelix-graphql        = { optional = true, workspace = true }
chelix-matrix         = { optional = true, workspace = true }
chelix-metrics        = { optional = true, workspace = true }
chelix-msteams        = { optional = true, workspace = true }
chelix-portable       = { workspace = true }
chelix-protocol       = { workspace = true }
chelix-service-traits = { workspace = true }
chelix-sessions       = { workspace = true }
chelix-skills         = { workspace = true }
chelix-slack          = { optional = true, workspace = true }
chelix-telephony      = { optional = true, workspace = true }
chelix-tls            = { optional = true, workspace = true }
chelix-tools          = { workspace = true }
chelix-vault          = { optional = true, workspace = true }
chelix-webhooks       = { workspace = true }
rand                  = { workspace = true }
reqwest               = { workspace = true }
rustls                = { optional = true, workspace = true }
secrecy               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
sysinfo               = { workspace = true }
tempfile              = { workspace = true }
thiserror             = { workspace = true }
time                  = { workspace = true }
tokio                 = { workspace = true }
tokio-tungstenite     = { workspace = true }
tokio-util            = { workspace = true }
toml                  = { workspace = true }
tower-http            = { features = ["catch-panic", "compression-gzip", "compression-zstd", "cors", "limit", "request-id", "sensitive-headers", "set-header", "trace"], workspace = true }
tracing               = { workspace = true }
url                   = { workspace = true }
urlencoding           = { workspace = true }
uuid                  = { workspace = true }
webauthn-rs           = { features = ["danger-allow-state-serialisation"], workspace = true }

[features]
default = [
  "discord",
  "graphql",
  "matrix",
  "mdns",
  "metrics",
  "msteams",
  "nostr",
  "prometheus",
  "push-notifications",
  "signal",
  "slack",
  "telephony",
  "tls",
  "trusted-network",
  "vault",
  "voice",
  "web-ui",
]
discord = ["chelix-gateway/discord"]
graphql = [
  "dep:async-graphql",
  "dep:async-graphql-axum",
  "dep:chelix-graphql",
  "chelix-gateway/graphql",
]
matrix = ["dep:chelix-matrix", "chelix-gateway/matrix"]
mdns = ["chelix-gateway/mdns"]
metrics = ["dep:chelix-metrics", "chelix-gateway/metrics"]
msteams = ["dep:chelix-msteams", "chelix-gateway/msteams"]
nostr = ["chelix-gateway/nostr"]
prometheus = ["metrics", "chelix-gateway/prometheus"]
push-notifications = ["dep:chrono", "chelix-gateway/push-notifications"]
signal = ["chelix-gateway/signal"]
slack = ["dep:chelix-slack", "chelix-gateway/slack"]
telephony = ["dep:chelix-telephony", "chelix-gateway/telephony"]
tls = ["dep:chelix-tls", "dep:rustls", "chelix-gateway/tls"]
trusted-network = ["chelix-gateway/trusted-network"]
vault = ["dep:chelix-vault", "chelix-gateway/vault"]
voice = ["chelix-gateway/voice"]
web-ui = ["chelix-gateway/web-ui"]

[dev-dependencies]
chelix-code-index.workspace = true
chelix-providers            = { workspace = true }
chelix-web                  = { workspace = true }
serial_test                 = { workspace = true }
sqlx                        = { workspace = true }

[lints]
workspace = true
